<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartLineActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:padding="5dp"
        >

        <ToggleButton
            android:id="@+id/startlineLiveMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/startlineSeperator"
            android:background="@drawable/toggle_map"
            android:shadowColor="#3b3b3b"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textAppearance="@style/RunLightDefaultTextfieldBold"
            android:textColor="#FFFFFF" >
        </ToggleButton>

        <TextView
            android:id="@+id/startlineLiveMap"
            style="@style/RunLightDefaultTextfieldBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/startlineLiveMapButton"
            android:layout_alignParentLeft="true"
            android:text="@string/startline_livemap"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/startlineDetailedGPSButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/startlineLiveMapWarn"
            android:layout_marginTop="20dp"
            android:background="@drawable/toggle_detailgps"
            android:shadowColor="#FFFFFF"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textAppearance="@style/RunLightDefaultTextfieldBold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/startlineDetailedGPS"
            style="@style/RunLightDefaultTextfieldBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/startlineDetailedGPSButton"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="16dp"
            android:text="@string/startline_detailedgps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/startlineStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/startline_start" />

        <TextView
            android:id="@+id/startlineDetailedGPSWarn"
            style="@style/RunLightDefaultTextfieldBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/startlineDetailedGPSButton"
            android:layout_alignParentLeft="true"
            android:text="@string/startline_batery_drain"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/startlineLiveMapWarn"
            style="@style/RunLightDefaultTextfieldBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/startlineLiveMapButton"
            android:layout_alignParentLeft="true"
            android:text="@string/startline_batery_drain"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/startlineLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/startlineWelcome"
            style="@style/RunLightDefaultTextfieldBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/startlineLogo"
            android:text="@string/startline_welcome"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/startlineSeperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startlineWelcome"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line_orange" />
    </RelativeLayout>

    <com.darvds.ribbonmenu.RibbonMenuView
        android:id="@+id/mapRibbonMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.darvds.ribbonmenu.RibbonMenuView>

</FrameLayout>